[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
flate2 = "1.0"
walkdir = "2.4"
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true